--- a/index.html
+++ b/index.html
@@ -7,18 +7,18 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <h1>Currículum Vitae</h1>
-
-  <section>
-    <h2>Título</h2>
-    <p>Estudiante de Ingeniería de Software con conocimiento en diversos lenguajes de programación y en bases de datos</p>
-  </section>
-
-  <section>
-    <h2>Datos personales</h2>
-    <p>Hola, mi nombre es María de Lourdes Hernández Cervantes.</p>
-    <p>Número telefónico: 656-863-1537</p>
-    <p>Correo electrónico: greyed301981@gmail.com</p>
+  <header>
+    <h1>Currículum Vitae</h1>
+  </header>
+  
+  <section class="personal-info">
+    <img src="me.jpeg" alt="Foto de María de Lourdes Hernández Cervantes" class="profile-picture">
+    <div>
+      <h2>Datos personales</h2>
+      <p>Hola, mi nombre es María de Lourdes Hernández Cervantes.</p>
+      <p>Número telefónico: 656-863-1537</p>
+      <p>Correo electrónico: greyed301981@gmail.com</p>
+    </div>
   </section>
 
   <section>
